# UIFramework

./: CMakeLists.txt  README.md  main.cpp
src/: Gui.cpp  Gui.h  ImUI_v2.h
src/core/: Colour.h  DX11PrimitiveRenderer.cpp  DX11PrimitiveRenderer.h  UIRenderer.cpp  UIRenderer.h
src/core/backend/: DX11Renderer.cpp  DX11Renderer.h  OpenGLRenderer.h
src/core/platform/: PlatformWin32.cpp  PlatformWin32.h
src/core/renderers/: IPrimitiveRenderer.h
src/core/renderers/base/: DX11PrimitiveRenderer.cpp  DX11PrimitiveRenderer.h
src/ui/: ImGui.cpp
